apps/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: portainer
    name: portainer
    namespace: observability
spec:
    ports:
        - name: http
          port: 9000
          protocol: TCP
          targetPort: 9000
        - name: https
          port: 9443
          protocol: TCP
          targetPort: 9443
    selector:
        app: portainer
