apps/portainer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: portainer-ingress
    namespace: observability
    annotations:
        glance/icon: di:portainer
        glance/name: "Portainer"
        glance/url: "https://portainer.realtong.cn"
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        nginx.ingress.kubernetes.io/proxy-body-size: "25m"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
        nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - portainer.realtong.cn
    rules:
        - host: portainer.realtong.cn
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: portainer
                            port:
                                number: 9000
